# niimath

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AGENTS.md  BITMAP.md  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  niimath  package-lock.json  package.json  package.json.bkup  pyproject.toml  setup.cfg  setup.py  version.js  vite.config.js
.github/scripts/: make_fixtures.py  reg_quality.py
.github/workflows/: gpl-build.yml  js.yml  npm_publish.yml  release.yml
SuperBuild/: External-CLOUDFLARE-ZLIB.cmake  SuperBuild.cmake
js/: GPL-NOTICE.md  LICENSE  README.md  esbuild.config.js  esbuild.config.ts  index.html  package-lock.json  package.json  server.js  server.ts  tsconfig.json
js/scripts/: collect-gpl-source.ts  generateTypeDefinitions.ts  parseNiimathHelp.js  parseNiimathHelp.ts  pre-build.ts
js/src/: core.ts  index-gpl.ts  index.js  index.ts  niimathOperators.json  types.ts  worker-gpl.ts  worker.js  worker.ts  workerImpl.ts
js/tests/: bsd.test.ts  gpl.test.ts  helpers.ts
niimath/: __init__.py  _dist_ver.py
src/: CMakeLists.txt  Info.plist  JavaScript.md  Makefile  MarchingCubes.c  allineate.c  allineate.h  arm_malloc.h  bmp.c  bmp.h  bw.c  bw.h  bwlabel.c  bwlabel.h  conform.c  conform.h  core.c  core.h  core32.c  core32.h  core64.c  coreFLT.c  dtifit.c  dtifit.h  fdr.c  fdr.h  filter.c  filter.h  index.js  license.txt  macos_validation.bat  meshify.c  meshify.h  nifti_io.c  nifti_io.h  niimath.c  niimath.js  notarize.sh  oldcubes.c  powell_newuoa.c  (+12 more)
src/niftilib/: nifti2_io.c  nifti2_io.h
src/znzlib/: znzlib.c
