[metadata]
name=niimath
description=NIIMATH Python package
long_description=file: README.md
long_description_content_type=text/markdown
license_file=LICENSE
url=https://github.com/rordenlab/niimath
project_urls=
    Changelog=https://github.com/rordenlab/niimath/releases
    Documentation=https://github.com/rordenlab/niimath
author=Rorden C, Webster M, Drake C, Jenkinson M, Clayden JD, Li N, Hanayik T
maintainer=Casper da Costa-Luis
maintainer_email=imaging@cdcl.ml
keywords=research, neuroimaging, neuroscience, mri, neuroimaging, nifti, dcm, nii, nitrc
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    scikit-build>=0.11.0
    cmake>=3.15
    ninja
python_requires=>=3.6
[options.entry_points]
console_scripts=
    niimath=niimath:main
[tool:setuptools_scm]
write_to = niimath/_dist_ver.py